# solidcare-api-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  application.py  dev.sh  pyproject.toml  requirements-deploy.txt  requirements.txt  startup.sh
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  main.py  register_models.py
app/core/audit/: writer.py
app/core/background/: celery_app.py
app/core/events/: bus.py
app/core/exceptions/: errors.py  handlers.py
app/core/middleware/: audit.py  rate_limit.py  tenant.py
app/core/notifications/: writer.py
app/core/security/: jwt.py  mfa.py
app/core/storage/: __init__.py  blob_service.py
app/modules/appointments/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/audit/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: dependencies.py  repository.py  router.py  schemas.py  service.py
app/modules/billing/: repository.py  schemas.py  service.py
docs/adr/: 001-modular-monolith.md
migrations/: env.py
migrations/versions/: bd2c78fe0918_initial_schema.py  c4e8a1b2d903_seed_rbac_permissions_and_roles.py  d5f3a2b1c904_seed_default_demo_clinic.py  e7f4b3c2d105_seed_icd10_common_codes.py  f1a2b3c4d206_add_encounter_attestation_fields.py
scripts/: seed_dev_admin.sql  seed_dev_rbac_users.sql  seed_e2e_users.sql
scripts/azure/: README.md  build-deploy-package.sh  deploy-dev.sh  deploy-run-from-package.sh
tests/: conftest.py
tests/integration/: conftest.py  test_auth_patient_appointment_flow.py  test_health.py
tests/unit/: test_app_smoke.py  test_file_upload_utils.py  test_jwt_and_rbac.py  test_jwt_extended.py  test_mfa.py  test_middleware_resilience.py  test_password.py
(+65 files in other folders)
