[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "solidcare-api-v2"
version = "2.0.0"
description = "Solidcare V2 — Enterprise Healthcare Platform API"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "ENV=test",
    "DATABASE_URL=postgresql+asyncpg://solidcare:solidcare@localhost:5432/solidcare_test",
]
