[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "solidcare-api-v2"
version = "2.0.0"
description = "Solidcare V2 — Enterprise Healthcare Platform API"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/modules/**/models.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disable_error_code = ["attr-defined", "name-defined", "arg-type", "assignment", "union-attr", "return-value", "misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
env = [
    "ENV=test",
    "DATABASE_URL=postgresql+asyncpg://solidcare:solidcare@localhost:5432/solidcare_test",
    "JWT_SECRET_KEY=test-secret-key-for-ci-only",
    "REDIS_URL=redis://localhost:6379/0",
]
